--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "start": "vite"
   },
   "dependencies": {
-    "@tanstack/react-router": "1.45.14",
-    "@tanstack/router-devtools": "1.45.14",
-    "@tanstack/router-vite-plugin": "1.45.13",
-    "immer": "^10.1.1",
+    "@tanstack/react-router": "1.50.0",
+    "@tanstack/router-devtools": "1.50.0",
+    "@tanstack/router-vite-plugin": "1.49.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "redaxios": "^0.5.1",
-    "zod": "^3.23.8"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
